--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "react-sorting-visualizer",
   "version": "0.1.0",
   "private": true,
+  "engine": {
+    "npm": "8.1.2",
+    "node": "16.13.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
