--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://rai-roshan.github.io/react-sorting-visualizer/",
   "name": "react-sorting-visualizer",
   "version": "0.1.0",
   "private": true,
